crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_named_struct_with_testing_feature.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
#[derive(RedoubtZero, RedoubtCodec)]
struct TestableSecrets {
    pub secret_key: [u8; 32],
    #[cfg(test)]
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<1> for TestableSecrets {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 1] {
        [&mut self.secret_key]
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 1] {
        [&mut self.secret_key]
    }
}
impl redoubt_vault_core::EncryptStruct<1> for TestableSecrets {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<1>,
        tags: &mut redoubt_vault_core::Tags<1>,
    ) -> Result<redoubt_vault_core::Ciphertexts<1>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<1> for TestableSecrets {
    fn decrypt_from(
        &mut self,
        aead: &redoubt_aead::Aead,
        aead_key: &[u8],
        nonces: &redoubt_vault_core::Nonces<1>,
        tags: &redoubt_vault_core::Tags<1>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<1>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(any(test, feature = "test-utils"))]
#[derive(Debug, Clone, Copy)]
pub enum TestableSecretsBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct TestableSecretsBox {
    inner: redoubt_vault_core::CipherBox<TestableSecrets, 1>,
    /// Atomic so that the check below can sit in a method taking
    /// `&self`, which is what a read is.
    #[cfg(any(test, feature = "test-utils"))]
    failure_counter: core::sync::atomic::AtomicUsize,
}
impl TestableSecretsBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead::Aead::default()),
            #[cfg(any(test, feature = "test-utils"))]
            failure_counter: core::sync::atomic::AtomicUsize::new(0),
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&TestableSecrets) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(any(test, feature = "test-utils"))]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut TestableSecrets) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(any(test, feature = "test-utils"))]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(any(test, feature = "test-utils"))]
    pub fn set_failure_mode(&self, mode: TestableSecretsBoxFailureMode) {
        use core::sync::atomic::Ordering;
        match mode {
            TestableSecretsBoxFailureMode::None => {
                self.failure_counter.store(0, Ordering::Relaxed);
            }
            TestableSecretsBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter.store(n, Ordering::Relaxed);
            }
        }
    }
    #[inline(always)]
    pub fn leak_secret_key(
        &self,
    ) -> Result<
        redoubt_zero::ZeroizingGuard<[u8; 32]>,
        redoubt_vault_core::CipherBoxError,
    > {
        #[cfg(any(test, feature = "test-utils"))]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.leak_field::<[u8; 32], 0, redoubt_vault_core::CipherBoxError>()
    }
    #[inline(always)]
    pub fn open_secret_key<F, R>(
        &self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&[u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(any(test, feature = "test-utils"))]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_field::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
    #[inline(always)]
    pub fn open_secret_key_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut [u8; 32]) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(any(test, feature = "test-utils"))]
        {
            use core::sync::atomic::Ordering;
            let left = self.failure_counter.load(Ordering::Relaxed);
            if left > 0 {
                self.failure_counter.store(left - 1, Ordering::Relaxed);
                if left - 1 == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner
            .open_field_mut::<[u8; 32], 0, F, R, redoubt_vault_core::CipherBoxError>(f)
    }
}
impl Default for TestableSecretsBox {
    fn default() -> Self {
        Self::new()
    }
}
