crates/redoubt-vault/derive/src/tests/snapshots/redoubt_vault_derive__tests__expand__snapshot_struct_with_all_fields_filtered.snap
---
source: crates/redoubt-vault/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
struct OnlyDefaults {
    #[codec(default)]
    pub field1: u64,
    #[codec(default)]
    pub field2: u32,
    #[codec(default)]
    __sentinel: redoubt_zero::ZeroizeOnDropSentinel,
}
use redoubt_vault_core::CipherBoxDyns as _;
impl redoubt_vault_core::CipherBoxDyns<0> for OnlyDefaults {
    fn to_encryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Encryptable; 0] {
        []
    }
    fn to_decryptable_dyn_fields(
        &mut self,
    ) -> [&mut dyn redoubt_vault_core::Decryptable; 0] {
        []
    }
}
impl redoubt_vault_core::EncryptStruct<0> for OnlyDefaults {
    fn encrypt_into(
        &mut self,
        aead: &mut redoubt_aead_v2::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<0>,
        tags: &mut redoubt_vault_core::Tags<0>,
    ) -> Result<redoubt_vault_core::Ciphertexts<0>, redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::encrypt_into(
            self.to_encryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
        )
    }
}
impl redoubt_vault_core::DecryptStruct<0> for OnlyDefaults {
    fn decrypt_from(
        &mut self,
        aead: &mut redoubt_aead_v2::Aead,
        aead_key: &[u8],
        nonces: &mut redoubt_vault_core::Nonces<0>,
        tags: &mut redoubt_vault_core::Tags<0>,
        ciphertexts: &mut redoubt_vault_core::Ciphertexts<0>,
    ) -> Result<(), redoubt_vault_core::CipherBoxError> {
        redoubt_vault_core::decrypt_from(
            &mut self.to_decryptable_dyn_fields(),
            aead,
            aead_key,
            nonces,
            tags,
            ciphertexts,
        )
    }
}
#[cfg(test)]
#[derive(Debug, Clone, Copy)]
pub enum OnlyDefaultsBoxFailureMode {
    None,
    FailOnNthOperation(usize),
}
#[derive(redoubt_zero::RedoubtZero)]
pub struct OnlyDefaultsBox {
    inner: redoubt_vault_core::CipherBox<OnlyDefaults, 0>,
    #[cfg(test)]
    failure_counter: usize,
}
impl OnlyDefaultsBox {
    #[inline(always)]
    pub fn new() -> Self {
        Self {
            inner: redoubt_vault_core::CipherBox::new(redoubt_aead_v2::Aead::default()),
            #[cfg(test)]
            failure_counter: 0,
        }
    }
    #[inline(always)]
    pub fn open<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&OnlyDefaults) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open(f)
    }
    #[inline(always)]
    pub fn open_mut<F, R>(
        &mut self,
        f: F,
    ) -> Result<redoubt_zero::ZeroizingGuard<R>, redoubt_vault_core::CipherBoxError>
    where
        F: FnMut(&mut OnlyDefaults) -> Result<R, redoubt_vault_core::CipherBoxError>,
        R: Default + redoubt_zero::FastZeroizable + redoubt_zero::ZeroizationProbe,
    {
        #[cfg(test)]
        {
            if self.failure_counter > 0 {
                self.failure_counter -= 1;
                if self.failure_counter == 0 {
                    return Err(
                        redoubt_vault_core::CipherBoxError::IntentionalCipherBoxError
                            .into(),
                    );
                }
            }
        }
        self.inner.open_mut(f)
    }
    #[cfg(test)]
    pub fn set_failure_mode(&mut self, mode: OnlyDefaultsBoxFailureMode) {
        match mode {
            OnlyDefaultsBoxFailureMode::None => {
                self.failure_counter = 0;
            }
            OnlyDefaultsBoxFailureMode::FailOnNthOperation(n) => {
                self.failure_counter = n;
            }
        }
    }
}
impl Default for OnlyDefaultsBox {
    fn default() -> Self {
        Self::new()
    }
}
